# antidist

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
notebooks/: antidist_conjecture.ipynb
src/: _about.py  antidist.py  counter_example.py
