[tool.poetry]
name = "antidist"
version = "1.0"
description = "Anti-distinguishability conjecture code"
authors = [
    "Vincent Russo <vincentrusso1@gmail.com>"
]
maintainers = [
    "Vincent Russo <vincentrusso1@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/vprusso/antidist"
keywords = ["quantum information", "quantum computing", "antidistinguishability"]


[tool.poetry.dependencies]
python = "^3.9"
cvxopt = "^1.2.5"
picos = "^2.0.30"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.5"
pep8 = "^1.7"
pylint = "^2.4"
mypy = "^0.750.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"